<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/home" />
        <item
            android:id="@+id/course"
            android:icon="@drawable/ic_food"
            android:title="@string/course" />
        <item
            android:id="@+id/cuisine"
            android:icon="@drawable/ic_earth"
            android:title="@string/world_cuisine" />
        <item
            android:id="@+id/holiday"
            android:icon="@drawable/ic_cake"
            android:title="@string/holiday" />
        <item
            android:id="@+id/diets"
            android:icon="@drawable/ic_food_apple_white_24dp"
            android:title="@string/diet" />
        <item
            android:id="@+id/allergy"
            android:icon="@drawable/ic_remove_circle"
            android:title="@string/allergy" />
        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_like"
            android:title="@string/favorites" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/shopping_list"
            android:icon="@drawable/ic_shopping"
            android:title="@string/shopping_list" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>

</menu>
